--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lucide-react": "^0.563.0",
     "react-dom": "^19.2.4",
     "recharts": "^2.12.7",
-    "firebase": "^12.9.0"
+    "firebase": "^12.9.0",
+    "docx": "8.5.0",
+    "html2canvas": "1.4.1",
+    "jspdf": "2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
